# circuitci

./: .gitignore  Cargo.toml  LICENSE  README.md  demo_project_circuit_for_acceptance.md  project.md
docs/: acceptance_demo.md  acceptance_suite_runner.md  agent_workflow.md  ams_ams1117_3v3_model.md  analog_spice_backend.md  analog_validation_modules.md  architecture.md  board_ir.md  board_ir_spice_generation.md  board_power_test_split.md  common_iot_board_readiness_gaps.md  component_model_contract.md  control_line_release_sequence.md  diode_operating_limits.md  diodes_ap2112k_3v3_model.md  easyeda_flying_probe_importer.md  easyeda_pro_inspector.md  embedded_ngspice_backend.md  embedded_spice_port.md  espressif_esp32_s3_wroom_1u_n16r8_model.md  espressif_esp32_wroom_32e_model.md  excellon_drill_importer.md  excellon_drill_ownership_fixture.md  fabrication_process_presets.md  functional_mcu_qemu_backend.md  gerber_copper_importer.md  gerber_importer_modules.md  gerber_outline_importer.md  gerber_solder_mask_importer.md  gerber_solder_paste_importer.md  integration_test_split.md  interface_protection_validation_split.md  internal_design.md  jlc_assembly_importer.md  kicad_ams1117_regulator_suggestion_fixture.md  kicad_ap2112_regulator_suggestion_fixture.md  kicad_bootstrap_bias_suggestion_fixture.md  kicad_esp32_wroom_32e_suggestion_fixture.md  kicad_grouped_bus_spice_fixture.md  kicad_hierarchy_alias_spice_fixture.md  (+81 more)
schemas/: board_ir.schema.json  component_model.schema.json  report.schema.json  scenario_suggestion_report.schema.json  suite_manifest.schema.json  (+1 more)
(+567 files in other folders)
