[package]
name = "circuitci"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6.1", features = ["derive"] }
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10.0"
sha2 = "0.10"
thiserror = "2.0"
walkdir = "2.5"

[dev-dependencies]
jsonschema = { version = "0.46.5", default-features = false }
tempfile = "3.23"
